--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install --upgrade pip setuptools wheel
+          pip uninstall -y setuptools
+          pip install setuptools
           pip install -r requirements.txt  # Adjust as per your requirements
 
       - name: Start Flask Application
