--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade pip setuptools wheel
-          pip cache purge
-          sudo apt-get install python3-dev build-essential
-          pip install cython
-          pip install -r requirements.txt
+              python -m pip install --upgrade pip setuptools wheel
+              pip install cython
+              pip install -r requirements.txt
+              pip cache purge
 
 
       - name: Start Flask Application
