--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,17 @@ jobs:
         with:
           python-version: '3.x'  # Replace with your Python version
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3-dev build-essential
+
       - name: Install dependencies
         run: |
-              python -m pip install --upgrade pip setuptools wheel
-              pip install cython
-              pip install -r requirements.txt
-              pip cache purge
+          python -m pip install --upgrade pip setuptools wheel
+          pip install cython
+          pip install -r requirements.txt
+          pip cache purge
 
 
       - name: Start Flask Application
