--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout code
@@ -18,11 +18,6 @@ jobs:
         with:
           python-version: '3.x'  # Replace with your Python version
 
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python3-dev build-essential
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
@@ -31,13 +26,14 @@ jobs:
           pip install -r requirements.txt
           pip cache purge
 
+      - name: Build static files with timeout
+        run: build_with_timeout.bat
 
-      - name: Build static files
+      - name: Run Flask Application
         run: |
-          python app.py build 
-          mv build docs
+          python app.py &
+          timeout /t 3 /nobreak
 
-      - name: Github Deployment
+      - name: GitHub Deployment
         run: |
           # Additional deployment steps if any
-
