--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,4 +34,4 @@ jobs:
 
       - name: GitHub Deployment
         run: |
-          # Additional deployment steps if any
+          mv build/* docs/
